I finished formatting the news cards and fixed the misaligned form controls in the newsletter form.

--- a/css/main.css
+++ b/css/main.css
@@ -11189,6 +11189,7 @@ small, .small {
 
 .search-field {
   width: 100%;
+  height: 47px;
   padding: 5px 15px;
   border: 2px solid rgba(0, 0, 0, 0.1);
   border-radius: 3px;
@@ -11196,6 +11197,7 @@ small, .small {
   outline: 1px solid rgba(255, 255, 255, 0.2);
   color: #555;
   background: rgba(0, 0, 0, 0.1);
+  font-size: 14px;
 }
 
 .search-button {
@@ -11213,6 +11215,10 @@ small, .small {
      object-fit: cover;
 }
 
+.card hr {
+  margin: 0 30px;
+}
+
 .card-body {
   padding: 30px;
 }
@@ -11220,6 +11226,17 @@ small, .small {
 .card-text {
   font-size: 0.8125rem;
   line-height: 1.375rem;
+}
+
+.card-footer {
+  background-color: inherit;
+  border-top: none;
+  padding: 30px 30px 0;
+}
+
+.author {
+  margin-left: 35px;
+  padding-left: 35px;
 }
 
 .avatar {
@@ -11257,7 +11274,7 @@ label {
 }
 
 #hero {
-  height: calc(100vh - 157px);
+  height: calc(100vh - 166px);
   min-height: 531px;
   background-image: url("../../img/carousel/web-design.jpeg");
   background-position: center;
@@ -11277,7 +11294,7 @@ label {
 
 @media screen and (min-width: 576px) {
   #hero {
-    height: calc(100vh - 171px);
+    height: calc(100vh - 180px);
   }
 }
 @media screen and (min-width: 768px) {
