--- a/scss/partials/_items.scss
+++ b/scss/partials/_items.scss
@@ -31,6 +31,7 @@
 
 .search-field {
   width: 100%;
+  height: 47px;
   padding: 5px 15px;
   border: 2px solid rgba(0, 0, 0, 0.1);
   border-radius: 3px;
@@ -38,6 +39,7 @@
   outline: 1px solid hsla(0, 0%, 100%, 0.2);
   color: #555;
   background: rgba(0, 0, 0, 0.1);
+  font-size: 14px;
 }
 
 .search-button {
@@ -54,6 +56,9 @@
   object-fit: cover;
 }
 
+.card hr {
+  margin: 0 30px;
+}
 .card-body {
   padding: 30px;
 }
@@ -61,6 +66,17 @@
 .card-text {
   font-size: 0.8125rem;
   line-height: 1.375rem;
+}
+
+.card-footer {
+  background-color: inherit;
+  border-top: none;
+  padding: 30px 30px 0;
+}
+
+.author {
+  margin-left: 35px;
+  padding-left: 35px;
 }
 
 .avatar {
