--- a/scss/partials/_sections.scss
+++ b/scss/partials/_sections.scss
@@ -12,7 +12,7 @@
 }
 
 #hero {
-  height: calc(100vh - 157px);
+  height: calc(100vh - 166px);
   min-height: 531px;
   @include picfix('../../img/carousel/web-design.jpeg');
   border-top: 1px solid white;
@@ -29,7 +29,7 @@
 
 @media screen and (min-width: 576px) {
   #hero {
-    height: calc(100vh - 171px);
+    height: calc(100vh - 180px);
   }
 }
 
